--- a/src/renderer/resources/global.css
+++ b/src/renderer/resources/global.css
@@ -1,12 +1,25 @@
 @import './fonts/Roboto/Roboto.css';
 @import './fonts/Space_Mono/Space_Mono.css';
 @import 'reset.css';
+@import 'tools.css';
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
 
 * {
   box-sizing: border-box;
+}
+
+input,
+select,
+textarea,
+button {
+  outline: none;
+}
+
+body {
+  background-color: magenta;
 }
