--- a/src/renderer/resources/fonts/Space_Mono/Space_Mono.css
+++ b/src/renderer/resources/fonts/Space_Mono/Space_Mono.css
@@ -1,27 +1,27 @@
 @font-face {
-  font-family: "Space Mono";
-  src: url("SpaceMono-Bold.ttf") format("truetype");
+  font-family: 'Space Mono';
+  src: url('SpaceMono-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Space Mono";
-  src: url("SpaceMono-BoldItalic.ttf") format("truetype");
+  font-family: 'Space Mono';
+  src: url('SpaceMono-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Space Mono";
-  src: url("SpaceMono-Regular.ttf") format("truetype");
+  font-family: 'Space Mono';
+  src: url('SpaceMono-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Space Mono";
-  src: url("SpaceMono-Italic.ttf") format("truetype");
+  font-family: 'Space Mono';
+  src: url('SpaceMono-Italic.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
 }
